:construction: inizio aggiornamento file progetti